Basic Tinder-like template

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /server/Connect2Game/bin/Debug/net8.0
 /server/Connect2Game/.vs/Connect2Game
 /server/Connect2Game/obj
+client/connect2game/yarn.lock
