--- a/client/connect2game/package.json
+++ b/client/connect2game/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@microsoft/signalr": "^8.0.7",
-    "@react-native-async-storage/async-storage": "^6.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -19,6 +19,7 @@
     "axios": "^1.8.3",
     "expo": "^52.0.35",
     "expo-av": "^15.0.2",
+    "expo-dev-client": "^5.0.20",
     "expo-image-picker": "^16.0.6",
     "expo-media-library": "^17.0.6",
     "expo-status-bar": "~2.0.1",
@@ -40,7 +41,6 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.7.0",
-    "react-native-secure-storage": "^0.1.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
