--- a/client/connect2game/package.json
+++ b/client/connect2game/package.json
@@ -18,13 +18,15 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.3",
     "expo": "^52.0.35",
-    "expo-av": "^15.0.2",
-    "expo-dev-client": "^5.0.20",
+    "expo-av": "~15.0.2",
+    "expo-dev-client": "~5.0.20",
     "expo-image-picker": "^16.0.6",
     "expo-media-library": "^17.0.6",
+    "expo-modules-core": "~2.2.3",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.26.18",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "metro": "^0.81.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
